--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,10 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+REDIS_CLIENT=predis
 REDIS_HOST=cube-redis
 REDIS_PASSWORD=null
-REDIS_PORT=6380
+REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
